# plyvel

./: .gitignore  azure-pipelines.yml  meson.build  pyproject.toml  vcpkg-configuration.json  vcpkg.json
doc/: installation.rst
plyvel/: meson.build
scripts/: install-leveldb.sh
