[build-system]
requires = ["meson-python", "cython"]
build-backend = "mesonpy"

[project]
name = "plyvel"
dynamic = ["version"]
description = "Plyvel, a fast and feature-rich Python interface to LevelDB"
readme = "README.rst"
requires-python = ">=3.8"
license = "BSD-3-Clause"
authors = [
    { name = "Wouter Bolsterlee", email = "wouter@bolsterl.ee" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Programming Language :: C++",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/wbolster/plyvel"

[project.optional-dependencies]
test = [
    "pytest>=3.6",
    "pytest-cov",
    "setuptools",
]
dev = [
    "plyvel[test]",
    "cibuildwheel",
    "sphinx",
    "tox",
]